<resources>
    <string name="app_name">Test</string>
    <integer name="com_vk_sdk_AppId">6070474</integer>
    <string name="facebook_app_id">1922124241359724</string>

    <string name="fb_login_protocol_scheme">fb1922124241359724</string>
    <string name="error_incorrect_phone">INCORRECT PHONE NUMBER</string>
    <string name="error_incorrect_mail">INCORRECT MAIL</string>
    <string name="error_something">SOMETHING GET WRONG</string>
    <string name="Sign_in">Sign In</string>
    <string name="sms_code_error">Sms code error</string>
    <string name="internet_conn_error">INTERNET CONNECTION ERROR</string>
    <string name="username_not_free_error">USERNAME NOT FREE</string>
    <string name="username_field_less_5">USERNAME LENGTH LESS 6</string>
    <string name="password_field_less_5">PASSWORD FIELD LESS 5</string>
    <string name="error_1996">ERROR 1996</string>
    <string name="error_no_type">SOMETHING GET ERROR</string>
    <string name="error_empty_quote">Quote text required</string>
    <string name="error_empty_comment">Comment text required</string>
    <string name="error_not_loaded_yet">NOT LOADED YET</string>
    <string name="error_cyrillic_letters">ERROR CYRILLIC LETTERS</string>
    <string name="follow">FOLLOW</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="request">REQUESTED</string>
    <string name="settings">SETTINGS</string>
    <string name="error_empty_search_result">EMPTY SEARCH RESULT</string>
    <string name="load_more_text">LOAD MORE</string>
    <string name="headerComment">COMMENT</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="personalData">PERSONAL DATA</string>
    <string name="phone">PHONE</string>
    <string name="name">NAME</string>
    <string name="username">USERNAME</string>
    <string name="gender">GENDER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="security">SECURITY</string>
    <string name="mail">MAIL</string>
    <string name="password">PASSWORD</string>
    <string name="other">OTHER SETTINGS</string>
    <string name="addPhone">ADD PHONE</string>
    <string name="addMail">ADD MAIL</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="search">SEARCH</string>
    <string name="feeds">FEEDS</string>
    <string name="closedAccaunt">CLOSED ACCAUNT</string>
    <string name="deleteAccount">DELETE ACCOUNT</string>
    <string name="quit">QUIT</string>
    <string name="aboutApp">ABOUT APP</string>
    <string name="exit_to_press_again">Please click BACK again to exit</string>
    <string name="save">SAVE</string>
    <string name="publish">PUBLISH</string>
    <string name="change">CHANGE</string>
    <string name="delete">DELETE</string>
    <string name="done">DONE</string>
    <string name="saved">SAVED</string>
    <string name="unknown">UNKNOWN</string>
    <string name="sms_code">SMS CODE</string>
    <string name="added_to_favorite">ADDED TO FAVORITE LIST</string>
    <string name="my_playlist">MY PLAYLIST</string>
    <string name="post">CREATE POST</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="Sign_up">SIGN UP</string>
    <string name="error_empty_feed">YOU DON\'T HAVE ANY POSTS</string>
    <string name="error_empty_universal">EMPTY</string>
    <string name="user">user $1%s</string>
    <string name="allow">ALLOW</string>

    <string name="pushLikeBody">liked your post</string>
    <string name="pushFollowBody">followed you</string>
    <string name="pushRequestBody">requested you</string>
    <string name="pushCommentBody">commented your post</string>
</resources>
