<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/res_error_connection_lay"
        android:id="@+id/include" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:foreground="#70000000"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        style="@style/LogoText"
        android:text="App Name"
        android:gravity="center"
        android:layout_alignParentTop="true"
        />
    <LinearLayout
        android:id="@+id/signBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/selectPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/sign_edittext_block_top_enabled"
                android:padding="16dp"
                app:srcCompat="@drawable/phone_select" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/selectMail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/sign_edittext_block_top_disabled"
                android:padding="16dp"
                app:srcCompat="@drawable/email" />
        </LinearLayout>
    <LinearLayout
        android:id="@+id/edittextBlock"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="vertical"
        android:background="@drawable/sign_edittext_block"
        android:padding="12dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="6dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/phone"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/edittext_bg"
                />




            <android.support.design.widget.TextInputEditText
                android:id="@+id/mail"
                style="@style/NormalText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:paddingLeft="6dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/mail"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:background="@drawable/edittext_bg"
                android:visibility="gone"
                />
        </RelativeLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/smsCode"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingLeft="6dp"
            android:visibility="gone"
            android:layout_marginBottom="8dp"
            android:hint="@string/sms_code"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/edittext_bg"
            />
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/signBlock"
        >

        <Button

            android:id="@+id/signUp"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="right"
            android:text="@string/Sign_up"
            android:background="@drawable/login_button"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/errorText"
            style="@style/ErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/progressLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80dddddd"
        android:gravity="center"
        android:visibility="gone"

        >

        <ProgressBar
            android:theme="@style/CircularProgress"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="45dp"
            android:layout_height="45dp" />
    </LinearLayout>
    <include layout="@layout/res_error_connection_lay"/>

</RelativeLayout>